<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <TextView style="@style/h2"
                android:id="@+id/tvCur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleCurrentArea" />

            <TextView style="@style/mainText"
                android:id="@+id/tvCurrentArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <Spinner
                android:id="@+id/spiProvince"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/selectProvince" >
            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout07"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <Spinner
                android:id="@+id/spiCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/selectCity" >
            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout08"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <Spinner
                android:id="@+id/spiCoutny"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/selectCoutny" >
            </Spinner>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/selectAreaBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:background="@drawable/button_selector_green"
                android:text="@string/selectConfirm"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>