<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <RelativeLayout
            android:id="@+id/layout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_lay_border_bottom" >

            <EditText
                android:id="@+id/oldPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/oldPassword"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size_h2" >
            </EditText>

            <ImageButton
                android:id="@+id/clearOldPwd"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:layout_marginTop="12dip"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/infoClear"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider" >
        </View>

        <RelativeLayout
            android:id="@+id/layout04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_lay_border_bottom" >

            <EditText
                android:id="@+id/userPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size_h2" >
            </EditText>

            <ImageButton
                android:id="@+id/clearPwd"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:layout_marginTop="12dip"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/infoClear"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider" >
        </View>

        <RelativeLayout
            android:id="@+id/layout05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_lay_border_bottom" >

            <EditText
                android:id="@+id/userPwd2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/confirmNewPassword"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size_h2" >
            </EditText>

            <ImageButton
                android:id="@+id/clearPwd2"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:layout_marginTop="12dip"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/infoClear"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider" >
        </View>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/findPwdBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:background="@drawable/button_selector_green"
                android:text="@string/okBtn"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>