<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="65dip"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <RelativeLayout
            android:id="@+id/layout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_lay_border_bottom" >

            <EditText
                android:id="@+id/userName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/userName"
                android:inputType="phone"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size_h2" />

            <ImageButton
                android:id="@+id/clearName"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:layout_marginTop="12dip"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/infoClear"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider" >
        </View>

        <RelativeLayout
            android:id="@+id/layout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_lay_border_bottom" >

            <EditText
                android:id="@+id/userPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/userPwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size_h2" >
            </EditText>

            <ImageButton
                android:id="@+id/clearPwd"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:layout_marginTop="12dip"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/infoClear"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider" >
        </View>

        <RelativeLayout
            android:id="@+id/layout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_lay_border_bottom" >

            <EditText
                android:id="@+id/userPwd2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/firm_pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size_h2" >
            </EditText>

            <ImageButton
                android:id="@+id/clearPwd2"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:layout_marginTop="12dip"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/infoClear"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider" >
        </View>

        <RelativeLayout
            android:id="@+id/layout05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_lay_border_bottom" >

            <EditText
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="请输入验证码"
                android:inputType="number"
                android:maxLength="6"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size_h2" >
            </EditText>

            <ImageButton
                android:id="@+id/clearCode"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:layout_marginTop="12dip"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/infoClear"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider" >
        </View>

        <LinearLayout
            android:id="@+id/llLoadCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/loadCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector_blue_light"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="获取验证码"
                android:textColor="@color/gray_light"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/register_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/agreementBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector_blue_light"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/agreement"
                android:textColor="@color/gray_light"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout07"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:background="@drawable/button_selector_green"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>